--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gh-page-menu-site",
+  "homepage": "https://iamjonguz.github.io/gh-page-menu-site/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
